<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="16dp"
        android:text="@string/currency"
        android:textSize="24sp"
        app:drawableLeftCompat="@drawable/ic_baseline_menu_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/currency1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/dollar"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <TextView
        android:id="@+id/value1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/zero"
        android:textSize="40sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/currency1"
        app:layout_constraintLeft_toRightOf="@+id/currency1"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency1"
        android:layout_marginTop="16dp"
        android:entries="@array/currencies"
        />
    <TextView
        android:id="@+id/currency2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/VND"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner1" />

    <TextView
        android:id="@+id/value2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/_46852_421"
        android:textSize="40sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/currency2"
        app:layout_constraintLeft_toRightOf="@+id/currency1"
        android:textColor="@color/black" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency2"
        android:layout_marginTop="16dp"
        android:entries="@array/currencies"
        />

    <LinearLayout
        android:id="@+id/convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/spinner2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/convert1"
            android:text="@string/_1"
            android:textSize="20sp"
            android:paddingEnd="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/convert_currency1"
            android:text="@string/USD"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/equal"
            android:text="@string/equal"
            android:textSize="20sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/convert2"
            android:text="@string/_20_256"
            android:textSize="20sp"
            android:paddingEnd="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/convert_currency2"
            android:text="@string/VND_1"
            android:textSize="20sp" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/update_text"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convert"
        android:layout_marginTop="16dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/update_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_text"
        android:layout_marginTop="16dp"
        android:text="@string/update_rates" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_button"
        android:layout_marginTop="16dp"
        android:weightSum="3">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ce"
            android:text="@string/ce"
            android:backgroundTint="@color/purple_200"
            android:onClick="reset"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/delete"
            android:drawableStart="@drawable/ic_baseline_menu_24"
            android:paddingStart="54dp"
            android:backgroundTint="@color/purple_200"
            android:onClick="delete"/>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/row_2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/row_1"
    android:weightSum="3">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/_1"
            android:text="@string/_1"
            android:backgroundTint="@color/purple_200"
            android:onClick="inputCurrency"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/_2"
            android:text="@string/_2"
            android:backgroundTint="@color/purple_200"
            android:onClick="inputCurrency"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/_3"
            android:text="@string/_3"
            android:backgroundTint="@color/purple_200"
            android:onClick="inputCurrency"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/row_2"
        android:weightSum="3">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/_4"
            android:text="@string/_4"
            android:backgroundTint="@color/purple_200"
            android:onClick="inputCurrency"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/_5"
            android:text="@string/_5"
            android:backgroundTint="@color/purple_200"
            android:onClick="inputCurrency"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/_6"
            android:text="@string/_6"
            android:backgroundTint="@color/purple_200"
            android:onClick="inputCurrency"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/row_3"
        android:weightSum="3">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/_7"
            android:text="@string/_7"
            android:backgroundTint="@color/purple_200"
            android:onClick="inputCurrency"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/_8"
            android:text="@string/_8"
            android:backgroundTint="@color/purple_200"
            android:onClick="inputCurrency"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/_9"
            android:text="@string/_9"
            android:backgroundTint="@color/purple_200"
            android:onClick="inputCurrency"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/row_4"
        android:weightSum="3">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/_0"
            android:text="@string/_0"
            android:backgroundTint="@color/purple_200"
            android:onClick="inputCurrency"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/dot"
            android:text="@string/dot"
            android:backgroundTint="@color/purple_200"
            android:onClick="inputCurrency"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>